# QtBankingAPp

./: CMakeLists.txt  README.md  UserRegistrationWidget.cpp  UserRegistrationWidget.h  aboutusdialogbox.cpp  aboutusdialogbox.h  custombackground.cpp  custombackground.h  customcolormanager.cpp  customcolormanager.h  customevent.cpp  customevent.h  dateofbirthvalidator.cpp  dateofbirthvalidator.h  emailvalidator.cpp  emailvalidator.h  errorhandler.cpp  errorhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  namevalidator.cpp  namevalidator.h  passwordvalidator.cpp  passwordvalidator.h  phonenumbervalidator.cpp  phonenumbervalidator.h  previewdialog.cpp  previewdialog.h  user_registrationwidget.cpp  user_registrationwidget.h  user_registrationwidget.ui  usernamevalidator.cpp  usernamevalidator.h
